<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SEM_1">

    <TextView
        android:id="@+id/PHY"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:text="@string/phy"
        app:layout_constraintEnd_toStartOf="@+id/phy_grade"
        app:layout_constraintTop_toBottomOf="@+id/CHEM" />
    <TextView
        android:id="@+id/MAT"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:text="@string/mat"
        app:layout_constraintEnd_toStartOf="@+id/mat_grade"
        app:layout_constraintTop_toBottomOf="@+id/PHY" />
    <TextView
        android:id="@+id/ENG"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:text="@string/eng"
        app:layout_constraintEnd_toStartOf="@+id/eng_grade"
        app:layout_constraintTop_toBottomOf="@+id/MAT" />
    <TextView
        android:id="@+id/C_LAB"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:text="@string/C_lab"
        app:layout_constraintEnd_toStartOf="@+id/C_lab_grade"
        app:layout_constraintTop_toBottomOf="@+id/ENG" />
    <TextView
        android:id="@+id/CHEM_LAB"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:text="@string/chem_lab"
        app:layout_constraintEnd_toStartOf="@+id/chem_lab_grade"
        app:layout_constraintTop_toBottomOf="@+id/C_LAB" />
    <TextView
        android:id="@+id/C"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:text="@string/C"
        app:layout_constraintEnd_toStartOf="@+id/C_grade"
        app:layout_constraintTop_toBottomOf="@+id/BES" />

    <TextView
        android:id="@+id/BES"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="40dp"
        android:text="@string/bes"
        app:layout_constraintEnd_toStartOf="@+id/BES_GRADE"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PHY_LAB"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:text="@string/phy_lab"
        app:layout_constraintEnd_toStartOf="@+id/phy_lab_grade"
        app:layout_constraintTop_toBottomOf="@+id/CHEM_LAB" />
    <TextView
        android:id="@+id/CHEM"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:text="@string/chem"
        app:layout_constraintEnd_toStartOf="@+id/che_grade"
        app:layout_constraintTop_toBottomOf="@+id/C" />


    <EditText
        android:id="@+id/che_grade"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginEnd="33dp"
        android:hint="@string/grade"
        android:imeActionLabel="Next"
        android:imeOptions="actionNext"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/C_grade"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:inputType="text"
        android:autofillHints="grade"/>

    <EditText
        android:id="@+id/phy_grade"
        android:inputType="text"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginEnd="33dp"
        android:hint="@string/grade"
        android:imeActionLabel="Next"
        android:imeOptions="actionNext"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/che_grade"
        android:autofillHints="grade" />

    <EditText
        android:id="@+id/mat_grade"
        android:layout_width="71dp"
        android:inputType="text"
        android:layout_height="48dp"
        android:autofillHints="grade"
        android:layout_marginEnd="33dp"
        android:hint="@string/grade"
        android:imeActionLabel="Next"
        android:imeOptions="actionNext"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phy_grade" />

    <EditText
        android:id="@+id/eng_grade"
        android:inputType="text"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:autofillHints="grade"
        android:layout_marginEnd="33dp"
        android:hint="@string/grade"
        android:imeActionLabel="Next"
        android:imeOptions="actionNext"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mat_grade" />

    <EditText
        android:id="@+id/C_lab_grade"
        android:inputType="text"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginEnd="33dp"
        android:hint="@string/grade"
        android:imeActionLabel="Next"
        android:imeOptions="actionNext"
        android:autofillHints="grade"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eng_grade" />

    <EditText
        android:id="@+id/chem_lab_grade"
        android:inputType="text"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginEnd="33dp"
        android:hint="@string/grade"
        android:imeActionLabel="Next"
        android:autofillHints="grade"
        android:imeOptions="actionNext"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/C_lab_grade" />

    <EditText
        android:id="@+id/phy_lab_grade"
        android:layout_width="71dp"
        android:inputType="text"
        android:layout_height="48dp"
        android:layout_marginEnd="33dp"
        android:hint="@string/grade"
        android:imeActionLabel="Done"
        android:autofillHints="grade"
        android:imeOptions="actionDone"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chem_lab_grade" />

    <EditText
        android:id="@+id/C_grade"
        android:layout_width="71dp"
        android:inputType="text"
        android:layout_height="48dp"
        android:layout_marginEnd="33dp"
        android:hint="@string/grade"
        android:autofillHints="grade"
        android:imeActionLabel="Next"
        android:imeOptions="actionNext"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BES_GRADE" />

    <EditText
        android:id="@+id/BES_GRADE"
        android:inputType="text"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="33dp"
        android:hint="@string/grade"
        android:autofillHints="grade"
        android:imeActionLabel="Next"
        android:imeOptions="actionNext"
        android:maxLength="2"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/sem1_confirm_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="152dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PHY_LAB" />


</androidx.constraintlayout.widget.ConstraintLayout>